--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             android:ems="10"
-            android:id="@+id/editText"
+            android:id="@+id/field_eMail"
             android:layout_weight="1"
             android:hint="@string/login_email_hint"/>
 
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
-            android:id="@+id/editText2"
+            android:id="@+id/field_password"
             android:layout_weight="1"
             android:hint="@string/login_pass_hint"/>
 
@@ -53,7 +53,7 @@
             android:text="@string/login_button_sign"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/button"
+            android:id="@+id/button_sign_in"
             android:layout_weight="1"
             android:theme="@style/ThemeOverlay.MyDarkButton"/>
 
@@ -61,7 +61,7 @@
             android:text="@string/login_button_create"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/button2"
+            android:id="@+id/button_create_account"
             android:layout_weight="1"
             android:theme="@style/ThemeOverlay.MyDarkButton"/>
     </LinearLayout>
