--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,5 +2,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="ru.ssau.mobile.lab2.LoginActivity">
-
+    <item android:id="@+id/action_sign_out"
+        android:title="@string/action_sign_out"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
 </menu>
+
