Expanding cards with meetings. Take part or leave. SMS.

--- a/app/src/main/res/menu/menu_meetings.xml
+++ b/app/src/main/res/menu/menu_meetings.xml
@@ -2,9 +2,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="ru.ssau.mobile.lab2.LoginActivity">
+    <item android:id="@+id/action_refresh"
+        android:title="@string/action_refresh"
+        android:orderInCategory="100"
+        android:icon="@drawable/ic_refresh"
+        app:showAsAction="ifRoom" />
     <item android:id="@+id/action_sign_out"
         android:title="@string/action_sign_out"
+        android:icon="@drawable/ic_leave"
         android:orderInCategory="100"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom" />
 </menu>
 
