--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:tag="cards main container">
 
@@ -15,39 +16,113 @@
         card_view:cardElevation="5dp"
         card_view:cardUseCompatPadding="true">
 
+        <FrameLayout
+            android:id="@+id/prior_line"
+            android:background="#FF0000"
+            android:layout_width="4dp"
+            android:layout_height="match_parent"/>
+
         <LinearLayout
+            android:id="@+id/meeting_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:animateLayoutChanges="true"
+            android:orientation="vertical"
             >
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="2"
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 >
 
                 <TextView
-                    android:id="@+id/meeting_name"
+                    android:id="@+id/label_meeting_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="start"
-                    android:layout_margin="@dimen/in_card_margin"
-                    android:text="Android Name"
+                    android:layout_gravity="start|center_vertical"
+                    android:layout_marginTop="@dimen/in_card_margin_big"
+                    android:layout_marginLeft="@dimen/in_card_margin_big"
+                    android:layout_weight="99"
+                    android:text="Meeting topic"
                     android:textAppearance="?android:attr/textAppearanceLarge"/>
 
-                <TextView
-                    android:id="@+id/textViewVersion"
+                <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="10dp"
+                    android:layout_gravity="end|center_vertical"
+                    android:layout_marginTop="@dimen/in_card_margin_big"
+                    android:layout_marginRight="@dimen/in_card_margin_big"
+                    android:src="@drawable/ic_take_part"
+                    android:id="@+id/button_take_part"
+                    android:layout_weight="1"
+                    android:backgroundTint="@android:color/transparent" />
 
-                    android:text="Android Version"
-                    android:textAppearance="?android:attr/textAppearanceMedium"/>
 
             </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            >
+            <TextView
+                android:id="@+id/label_meeting_start_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start|center_vertical"
+                android:layout_margin="@dimen/in_card_margin_big"
+                android:layout_weight="99"
+                android:text="Start time: lotsa time here yeah"
+                android:textAppearance="?android:attr/textAppearanceMedium"/>
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|center_vertical"
+                android:layout_margin="@dimen/in_card_margin_big"
+                android:src="@drawable/ic_send_sms"
+                android:backgroundTint="@android:color/transparent"
+                android:id="@+id/button_send_sms"
+                android:layout_weight="1" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:orientation="vertical"
+                android:id="@+id/expandable_part">
+                <TextView
+                    android:id="@+id/label_meeting_end_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start|center_vertical"
+                    android:layout_marginLeft="@dimen/in_card_margin_big"
+                    android:layout_weight="9"
+                    android:text="End time:"
+                    android:textAppearance="?android:attr/textAppearanceMedium"/>
+                <TextView
+                    android:id="@+id/label_meeting_summary"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start|center_vertical"
+                    android:layout_marginTop="@dimen/in_card_margin_small"
+                    android:layout_marginLeft="@dimen/in_card_margin_big"
+                    android:layout_weight="9"
+                    android:text="Summary"
+                    android:textAppearance="?android:attr/textAppearanceMedium"/>
+                <TextView
+                    android:id="@+id/label_meeting_members"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start|center_vertical"
+                    android:layout_marginTop="@dimen/in_card_margin_small"
+                    android:layout_marginLeft="@dimen/in_card_margin_big"
+                    android:layout_marginBottom="@dimen/in_card_margin_big"
+                    android:layout_weight="9"
+                    android:text="Members:"
+                    android:textAppearance="?android:attr/textAppearanceMedium"/>
+            </LinearLayout>
+
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
