--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="login_button_text">20sp</dimen>
-    <dimen name="in_card_margin">10dp</dimen>
+    <dimen name="in_card_margin_big">10dp</dimen>
+    <dimen name="in_card_margin_small">6dp</dimen>
 </resources>
