--- a/app/src/main/res/layout/activity_meetings.xml
+++ b/app/src/main/res/layout/activity_meetings.xml
@@ -6,4 +6,11 @@
         android:id="@+id/recycle_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/ic_fab" />
 </FrameLayout>
