--- a/app/src/main/res/layout/activity_new_meeting.xml
+++ b/app/src/main/res/layout/activity_new_meeting.xml
@@ -110,7 +110,7 @@
     </LinearLayout>
 
     <TextView
-        android:text="Participants:"
+        android:text="@string/participants"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_vertical_margin"
