--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -91,15 +91,30 @@
                 android:visibility="gone"
                 android:orientation="vertical"
                 android:id="@+id/expandable_part">
-                <TextView
-                    android:id="@+id/label_meeting_end_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="start|center_vertical"
-                    android:layout_marginLeft="@dimen/in_card_margin_big"
-                    android:layout_weight="9"
-                    android:text="End time:"
-                    android:textAppearance="?android:attr/textAppearanceMedium"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    >
+                    <TextView
+                        android:id="@+id/label_meeting_end_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start|center_vertical"
+                        android:layout_marginLeft="@dimen/in_card_margin_big"
+                        android:layout_weight="99"
+                        android:text="End time:"
+                        android:textAppearance="?android:attr/textAppearanceMedium"/>
+                    <ImageButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end|center_vertical"
+                        android:layout_margin="@dimen/in_card_margin_big"
+                        android:src="@drawable/ic_delete"
+                        android:backgroundTint="@android:color/transparent"
+                        android:id="@+id/button_delete"
+                        android:layout_weight="1" />
+                </LinearLayout>
                 <TextView
                     android:id="@+id/label_meeting_summary"
                     android:layout_width="wrap_content"
