--- a/app/src/main/res/menu/menu_meetings.xml
+++ b/app/src/main/res/menu/menu_meetings.xml
@@ -16,6 +16,6 @@
         android:id="@+id/action_search"
         android:title="Search"
         app:showAsAction="ifRoom"
-        android:actionViewClass="android.widget.SearchView" />
+        android:icon="@drawable/ic_search" />
 </menu>
 
