--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -109,7 +109,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="end|center_vertical"
-                        android:layout_margin="@dimen/in_card_margin_big"
+                        android:layout_marginRight="@dimen/in_card_margin_big"
                         android:src="@drawable/ic_delete"
                         android:backgroundTint="@android:color/transparent"
                         android:id="@+id/button_delete"
